; ModuleID = '/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/filters/extr_mbfilter_iso2022_kr.c_mbfl_filt_conv_wchar_2022kr.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/filters/extr_mbfilter_iso2022_kr.c_mbfl_filt_conv_wchar_2022kr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 (i32, i32)* }

@ucs_a1_uhc_table_min = common dso_local global i32 0, align 4
@ucs_a1_uhc_table_max = common dso_local global i32 0, align 4
@ucs_a1_uhc_table = common dso_local global i32* null, align 8
@ucs_a2_uhc_table_min = common dso_local global i32 0, align 4
@ucs_a2_uhc_table_max = common dso_local global i32 0, align 4
@ucs_a2_uhc_table = common dso_local global i32* null, align 8
@ucs_a3_uhc_table_min = common dso_local global i32 0, align 4
@ucs_a3_uhc_table_max = common dso_local global i32 0, align 4
@ucs_a3_uhc_table = common dso_local global i32* null, align 8
@ucs_i_uhc_table_min = common dso_local global i32 0, align 4
@ucs_i_uhc_table_max = common dso_local global i32 0, align 4
@ucs_i_uhc_table = common dso_local global i32* null, align 8
@ucs_s_uhc_table_min = common dso_local global i32 0, align 4
@ucs_s_uhc_table_max = common dso_local global i32 0, align 4
@ucs_s_uhc_table = common dso_local global i32* null, align 8
@ucs_r1_uhc_table_min = common dso_local global i32 0, align 4
@ucs_r1_uhc_table_max = common dso_local global i32 0, align 4
@ucs_r1_uhc_table = common dso_local global i32* null, align 8
@ucs_r2_uhc_table_min = common dso_local global i32 0, align 4
@ucs_r2_uhc_table_max = common dso_local global i32 0, align 4
@ucs_r2_uhc_table = common dso_local global i32* null, align 8
@MBFL_WCSPLANE_MASK = common dso_local global i32 0, align 4
@MBFL_WCSPLANE_KSC5601 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbfl_filt_conv_wchar_2022kr(i32 %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @ucs_a1_uhc_table_min, align 4
  %10 = icmp sge i32 %8, %9
  br i1 %10, label %11, label %23

11:                                               ; preds = %2
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @ucs_a1_uhc_table_max, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %11
  %16 = load i32*, i32** @ucs_a1_uhc_table, align 8
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @ucs_a1_uhc_table_min, align 4
  %19 = sub nsw i32 %17, %18
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %16, i64 %20
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %7, align 4
  br label %125

23:                                               ; preds = %11, %2
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @ucs_a2_uhc_table_min, align 4
  %26 = icmp sge i32 %24, %25
  br i1 %26, label %27, label %39

27:                                               ; preds = %23
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* @ucs_a2_uhc_table_max, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %39

31:                                               ; preds = %27
  %32 = load i32*, i32** @ucs_a2_uhc_table, align 8
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* @ucs_a2_uhc_table_min, align 4
  %35 = sub nsw i32 %33, %34
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %32, i64 %36
  %38 = load i32, i32* %37, align 4
  store i32 %38, i32* %7, align 4
  br label %124

39:                                               ; preds = %27, %23
  %40 = load i32, i32* %3, align 4
  %41 = load i32, i32* @ucs_a3_uhc_table_min, align 4
  %42 = icmp sge i32 %40, %41
  br i1 %42, label %43, label %55

43:                                               ; preds = %39
  %44 = load i32, i32* %3, align 4
  %45 = load i32, i32* @ucs_a3_uhc_table_max, align 4
  %46 = icmp slt i32 %44, %45
  br i1 %46, label %47, label %55

47:                                               ; preds = %43
  %48 = load i32*, i32** @ucs_a3_uhc_table, align 8
  %49 = load i32, i32* %3, align 4
  %50 = load i32, i32* @ucs_a3_uhc_table_min, align 4
  %51 = sub nsw i32 %49, %50
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %48, i64 %52
  %54 = load i32, i32* %53, align 4
  store i32 %54, i32* %7, align 4
  br label %123

55:                                               ; preds = %43, %39
  %56 = load i32, i32* %3, align 4
  %57 = load i32, i32* @ucs_i_uhc_table_min, align 4
  %58 = icmp sge i32 %56, %57
  br i1 %58, label %59, label %71

59:                                               ; preds = %55
  %60 = load i32, i32* %3, align 4
  %61 = load i32, i32* @ucs_i_uhc_table_max, align 4
  %62 = icmp slt i32 %60, %61
  br i1 %62, label %63, label %71

63:                                               ; preds = %59
  %64 = load i32*, i32** @ucs_i_uhc_table, align 8
  %65 = load i32, i32* %3, align 4
  %66 = load i32, i32* @ucs_i_uhc_table_min, align 4
  %67 = sub nsw i32 %65, %66
  %68 = sext i32 %67 to i64
  %69 = getelementptr inbounds i32, i32* %64, i64 %68
  %70 = load i32, i32* %69, align 4
  store i32 %70, i32* %7, align 4
  br label %122

71:                                               ; preds = %59, %55
  %72 = load i32, i32* %3, align 4
  %73 = load i32, i32* @ucs_s_uhc_table_min, align 4
  %74 = icmp sge i32 %72, %73
  br i1 %74, label %75, label %87

75:                                               ; preds = %71
  %76 = load i32, i32* %3, align 4
  %77 = load i32, i32* @ucs_s_uhc_table_max, align 4
  %78 = icmp slt i32 %76, %77
  br i1 %78, label %79, label %87

79:                                               ; preds = %75
  %80 = load i32*, i32** @ucs_s_uhc_table, align 8
  %81 = load i32, i32* %3, align 4
  %82 = load i32, i32* @ucs_s_uhc_table_min, align 4
  %83 = sub nsw i32 %81, %82
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds i32, i32* %80, i64 %84
  %86 = load i32, i32* %85, align 4
  store i32 %86, i32* %7, align 4
  br label %121

87:                                               ; preds = %75, %71
  %88 = load i32, i32* %3, align 4
  %89 = load i32, i32* @ucs_r1_uhc_table_min, align 4
  %90 = icmp sge i32 %88, %89
  br i1 %90, label %91, label %103

91:                                               ; preds = %87
  %92 = load i32, i32* %3, align 4
  %93 = load i32, i32* @ucs_r1_uhc_table_max, align 4
  %94 = icmp slt i32 %92, %93
  br i1 %94, label %95, label %103

95:                                               ; preds = %91
  %96 = load i32*, i32** @ucs_r1_uhc_table, align 8
  %97 = load i32, i32* %3, align 4
  %98 = load i32, i32* @ucs_r1_uhc_table_min, align 4
  %99 = sub nsw i32 %97, %98
  %100 = sext i32 %99 to i64
  %101 = getelementptr inbounds i32, i32* %96, i64 %100
  %102 = load i32, i32* %101, align 4
  store i32 %102, i32* %7, align 4
  br label %120

103:                                              ; preds = %91, %87
  %104 = load i32, i32* %3, align 4
  %105 = load i32, i32* @ucs_r2_uhc_table_min, align 4
  %106 = icmp sge i32 %104, %105
  br i1 %106, label %107, label %119

107:                                              ; preds = %103
  %108 = load i32, i32* %3, align 4
  %109 = load i32, i32* @ucs_r2_uhc_table_max, align 4
  %110 = icmp slt i32 %108, %109
  br i1 %110, label %111, label %119

111:                                              ; preds = %107
  %112 = load i32*, i32** @ucs_r2_uhc_table, align 8
  %113 = load i32, i32* %3, align 4
  %114 = load i32, i32* @ucs_r2_uhc_table_min, align 4
  %115 = sub nsw i32 %113, %114
  %116 = sext i32 %115 to i64
  %117 = getelementptr inbounds i32, i32* %112, i64 %116
  %118 = load i32, i32* %117, align 4
  store i32 %118, i32* %7, align 4
  br label %119

119:                                              ; preds = %111, %107, %103
  br label %120

120:                                              ; preds = %119, %95
  br label %121

121:                                              ; preds = %120, %79
  br label %122

122:                                              ; preds = %121, %63
  br label %123

123:                                              ; preds = %122, %47
  br label %124

124:                                              ; preds = %123, %31
  br label %125

125:                                              ; preds = %124, %15
  %126 = load i32, i32* %7, align 4
  %127 = ashr i32 %126, 8
  %128 = and i32 %127, 255
  store i32 %128, i32* %5, align 4
  %129 = load i32, i32* %7, align 4
  %130 = and i32 %129, 255
  store i32 %130, i32* %6, align 4
  %131 = load i32, i32* %5, align 4
  %132 = icmp slt i32 %131, 161
  br i1 %132, label %136, label %133

133:                                              ; preds = %125
  %134 = load i32, i32* %6, align 4
  %135 = icmp slt i32 %134, 161
  br i1 %135, label %136, label %138

136:                                              ; preds = %133, %125
  %137 = load i32, i32* %3, align 4
  store i32 %137, i32* %7, align 4
  br label %138

138:                                              ; preds = %136, %133
  %139 = load i32, i32* %7, align 4
  %140 = and i32 %139, 32768
  %141 = icmp ne i32 %140, 0
  br i1 %141, label %142, label %145

142:                                              ; preds = %138
  %143 = load i32, i32* %7, align 4
  %144 = sub nsw i32 %143, 32896
  store i32 %144, i32* %7, align 4
  br label %145

145:                                              ; preds = %142, %138
  %146 = load i32, i32* %7, align 4
  %147 = icmp sle i32 %146, 0
  br i1 %147, label %148, label %170

148:                                              ; preds = %145
  %149 = load i32, i32* %3, align 4
  %150 = load i32, i32* @MBFL_WCSPLANE_MASK, align 4
  %151 = xor i32 %150, -1
  %152 = and i32 %149, %151
  store i32 %152, i32* %5, align 4
  %153 = load i32, i32* %5, align 4
  %154 = load i32, i32* @MBFL_WCSPLANE_KSC5601, align 4
  %155 = icmp eq i32 %153, %154
  br i1 %155, label %156, label %160

156:                                              ; preds = %148
  %157 = load i32, i32* %3, align 4
  %158 = load i32, i32* @MBFL_WCSPLANE_MASK, align 4
  %159 = and i32 %157, %158
  store i32 %159, i32* %7, align 4
  br label %160

160:                                              ; preds = %156, %148
  %161 = load i32, i32* %3, align 4
  %162 = icmp eq i32 %161, 0
  br i1 %162, label %163, label %164

163:                                              ; preds = %160
  store i32 0, i32* %7, align 4
  br label %169

164:                                              ; preds = %160
  %165 = load i32, i32* %7, align 4
  %166 = icmp sle i32 %165, 0
  br i1 %166, label %167, label %168

167:                                              ; preds = %164
  store i32 -1, i32* %7, align 4
  br label %168

168:                                              ; preds = %167, %164
  br label %169

169:                                              ; preds = %168, %163
  br label %181

170:                                              ; preds = %145
  %171 = load i32, i32* %7, align 4
  %172 = icmp sge i32 %171, 128
  br i1 %172, label %173, label %176

173:                                              ; preds = %170
  %174 = load i32, i32* %7, align 4
  %175 = icmp slt i32 %174, 8481
  br i1 %175, label %179, label %176

176:                                              ; preds = %173, %170
  %177 = load i32, i32* %7, align 4
  %178 = icmp sgt i32 %177, 32896
  br i1 %178, label %179, label %180

179:                                              ; preds = %176, %173
  store i32 -1, i32* %7, align 4
  br label %180

180:                                              ; preds = %179, %176
  br label %181

181:                                              ; preds = %180, %169
  %182 = load i32, i32* %7, align 4
  %183 = icmp sge i32 %182, 0
  br i1 %183, label %184, label %304

184:                                              ; preds = %181
  %185 = load i32, i32* %7, align 4
  %186 = icmp slt i32 %185, 128
  br i1 %186, label %187, label %219

187:                                              ; preds = %184
  %188 = load i32, i32* %7, align 4
  %189 = icmp sgt i32 %188, 0
  br i1 %189, label %190, label %219

190:                                              ; preds = %187
  %191 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %192 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %191, i32 0, i32 0
  %193 = load i32, i32* %192, align 8
  %194 = and i32 %193, 16
  %195 = icmp ne i32 %194, 0
  br i1 %195, label %196, label %209

196:                                              ; preds = %190
  %197 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %198 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %197, i32 0, i32 2
  %199 = load i32 (i32, i32)*, i32 (i32, i32)** %198, align 8
  %200 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %201 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %200, i32 0, i32 1
  %202 = load i32, i32* %201, align 4
  %203 = call i32 %199(i32 15, i32 %202)
  %204 = call i32 @CK(i32 %203)
  %205 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %206 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %205, i32 0, i32 0
  %207 = load i32, i32* %206, align 8
  %208 = and i32 %207, -17
  store i32 %208, i32* %206, align 8
  br label %209

209:                                              ; preds = %196, %190
  %210 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %211 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %210, i32 0, i32 2
  %212 = load i32 (i32, i32)*, i32 (i32, i32)** %211, align 8
  %213 = load i32, i32* %7, align 4
  %214 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %215 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %214, i32 0, i32 1
  %216 = load i32, i32* %215, align 4
  %217 = call i32 %212(i32 %213, i32 %216)
  %218 = call i32 @CK(i32 %217)
  br label %303

219:                                              ; preds = %187, %184
  %220 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %221 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %220, i32 0, i32 0
  %222 = load i32, i32* %221, align 8
  %223 = and i32 %222, 256
  %224 = icmp eq i32 %223, 0
  br i1 %224, label %225, label %262

225:                                              ; preds = %219
  %226 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %227 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %226, i32 0, i32 2
  %228 = load i32 (i32, i32)*, i32 (i32, i32)** %227, align 8
  %229 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %230 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %229, i32 0, i32 1
  %231 = load i32, i32* %230, align 4
  %232 = call i32 %228(i32 27, i32 %231)
  %233 = call i32 @CK(i32 %232)
  %234 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %235 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %234, i32 0, i32 2
  %236 = load i32 (i32, i32)*, i32 (i32, i32)** %235, align 8
  %237 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %238 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %237, i32 0, i32 1
  %239 = load i32, i32* %238, align 4
  %240 = call i32 %236(i32 36, i32 %239)
  %241 = call i32 @CK(i32 %240)
  %242 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %243 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %242, i32 0, i32 2
  %244 = load i32 (i32, i32)*, i32 (i32, i32)** %243, align 8
  %245 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %246 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %245, i32 0, i32 1
  %247 = load i32, i32* %246, align 4
  %248 = call i32 %244(i32 41, i32 %247)
  %249 = call i32 @CK(i32 %248)
  %250 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %251 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %250, i32 0, i32 2
  %252 = load i32 (i32, i32)*, i32 (i32, i32)** %251, align 8
  %253 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %254 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %253, i32 0, i32 1
  %255 = load i32, i32* %254, align 4
  %256 = call i32 %252(i32 67, i32 %255)
  %257 = call i32 @CK(i32 %256)
  %258 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %259 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %258, i32 0, i32 0
  %260 = load i32, i32* %259, align 8
  %261 = or i32 %260, 256
  store i32 %261, i32* %259, align 8
  br label %262

262:                                              ; preds = %225, %219
  %263 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %264 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %263, i32 0, i32 0
  %265 = load i32, i32* %264, align 8
  %266 = and i32 %265, 16
  %267 = icmp eq i32 %266, 0
  br i1 %267, label %268, label %281

268:                                              ; preds = %262
  %269 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %270 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %269, i32 0, i32 2
  %271 = load i32 (i32, i32)*, i32 (i32, i32)** %270, align 8
  %272 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %273 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %272, i32 0, i32 1
  %274 = load i32, i32* %273, align 4
  %275 = call i32 %271(i32 14, i32 %274)
  %276 = call i32 @CK(i32 %275)
  %277 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %278 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %277, i32 0, i32 0
  %279 = load i32, i32* %278, align 8
  %280 = or i32 %279, 16
  store i32 %280, i32* %278, align 8
  br label %281

281:                                              ; preds = %268, %262
  %282 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %283 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %282, i32 0, i32 2
  %284 = load i32 (i32, i32)*, i32 (i32, i32)** %283, align 8
  %285 = load i32, i32* %7, align 4
  %286 = ashr i32 %285, 8
  %287 = and i32 %286, 255
  %288 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %289 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %288, i32 0, i32 1
  %290 = load i32, i32* %289, align 4
  %291 = call i32 %284(i32 %287, i32 %290)
  %292 = call i32 @CK(i32 %291)
  %293 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %294 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %293, i32 0, i32 2
  %295 = load i32 (i32, i32)*, i32 (i32, i32)** %294, align 8
  %296 = load i32, i32* %7, align 4
  %297 = and i32 %296, 255
  %298 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %299 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %298, i32 0, i32 1
  %300 = load i32, i32* %299, align 4
  %301 = call i32 %295(i32 %297, i32 %300)
  %302 = call i32 @CK(i32 %301)
  br label %303

303:                                              ; preds = %281, %209
  br label %309

304:                                              ; preds = %181
  %305 = load i32, i32* %3, align 4
  %306 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %307 = call i32 @mbfl_filt_conv_illegal_output(i32 %305, %struct.TYPE_4__* %306)
  %308 = call i32 @CK(i32 %307)
  br label %309

309:                                              ; preds = %304, %303
  %310 = load i32, i32* %3, align 4
  ret i32 %310
}

declare dso_local i32 @CK(i32) #1

declare dso_local i32 @mbfl_filt_conv_illegal_output(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
